force-app/main/default/objects/Purchase_Contract_Product__c/Purchase_Contract_Product__c.object-meta.xml
<CustomObject>
    <label>Purchase Contract Product</label>
    <nameField>
        <displayFormat>PCP-{000000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>