force-app/main/default/objects/Purchase_Contract_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>HaravanProductVariant__c</referenceTo>
    <relationshipLabel>Purchase Contract Product</relationshipLabel>
    <relationshipName>Purchase_Contract_Product</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>