force-app/main/default/objects/Purchase_Contract_Product__c/fields/Purchase_Contract__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Contract__c</fullName>
    <label>Purchase Contract</label>
    <referenceTo>Purchase_contract__c</referenceTo>
    <relationshipLabel>Purchase Contract Product</relationshipLabel>
    <relationshipName>Purchase_Contract_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>